--- a/news/templates/all-news/base.html
+++ b/news/templates/all-news/base.html
@@ -1,4 +1,5 @@
 {% load bootstrap4 %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,10 +13,12 @@
 
     {% block styles %}
         {% bootstrap_css %}
+        <link rel="stylesheet" href="{% static 'css/basenews.css' %}">
     {% endblock %}
 </head>
 <body>
-    {% block content %} <h1 class="text-center">News for {{date|date:"1 d-F Y"}} </h1> {% endblock %}
+    {% include "navbar.html" %}
+    {% block content %} <h1 class="text-center">News for {{date|date:"d-F Y"}} </h1> {% endblock %}
 
     {% block scripts %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
